tenzir/tests/exec/expr/escape/basic/invalid_sequence.tql
// error

from {
  x: "\U9999999",
}
